# poly-match

./: README.md  benchmark.ipynb  measure.py  measure_all.py  measure_with_warmup.py  poly_match_v1.py  poly_match_v1_5_vectorized.py  poly_match_v1_6_excessively_vectorized.py  poly_match_v1_6_fully_vectorized.py  poly_match_v1_6_numba.py  poly_match_v1_7_numba.py  poly_match_v1_8_numba_early_exit.py  poly_match_v2_riir.py  poly_match_v3_riir_polygon.py  poly_match_v4_avoid_allocs.py  poly_match_v5_1_varied_polygons.py  poly_match_v5_find_all_in_rust.py  pyproject.toml  rusty_python.md  test_poly_match.py
poly_match_rs/: Cargo.toml  pyproject.toml
poly_match_rs/src/: lib.rs  lib_v0.rs  lib_v1.rs  lib_v2.rs  lib_v3.rs  lib_v4.rs
