[package]
name = "poly_match_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "poly_match_rs"
crate-type = ["cdylib"]

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "macros", "gil-refs"] }

numpy = "0.21"
ndarray = "0.15"
ndarray-linalg = "0.16"
